@@ -16,7 +16,7 @@ def main():
 
     # Define a new user having full r/w permissions and a read-only
     # anonymous user
-    authorizer.add_user('user', '12345', os.getcwd(), perm='elradfmw')
+    authorizer.add_user('user', '12345', os.getcwd(), perm='elradfmwM')
     authorizer.add_anonymous(os.getcwd())
 
     # Instantiate FTP handler class
